--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,7 +1,8 @@
 <h1>My Portfolio</h1>
 <h3>Search for Stocks</h3>
 <div id="stock-lookup">
-  <%= form_tag search_stocks_path, method: :get, id: "stock-lookup-form" do %>
+  <%= form_tag search_stocks_path, remote: true, method: :get,
+      id: "stock-lookup-form" do %>
     <div class="form-group row no-padding text-center col-md-12">
       <div class="col-md-10">
         <%= text_field_tag :stock, params[:stock],
@@ -16,11 +17,6 @@
      </div>
   <% end %>
 </div>
-
-<% if @stock %>
-  <div class="well results-block">
-    <strong>Symbol: <%= @stock.ticker %></strong>
-    <strong>Name: <%= @stock.name %></strong>
-    <strong>Last Price: <%= @stock.last_price %></strong>
-  </div>
-<% end %>
+<div id="results">
+    <%= render 'users/result' %>
+</div>
